feat: trigger sync from advisory notifications
